# sde-skills

./: .env  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml
_astro/: CFOverview.B8afb3dv.js  CFOverview.CXYZcWjx.js  CFOverview.CZddiFCI.js  CFOverview.D-75PJmh.js  CFOverview.DCUUaqF0.js  CFOverview.blxuo3vF.js  FrameworkContents.Bi3xIUT2.js  FrameworkContents.CeOVadzR.js  FrameworkContents.CujGiURi.js  FrameworkContents.DNA-Ggzp.js  FrameworkContents.DOyHJsl_.js  FrameworkContents.Dt6JnNPz.js  MappingMatrix.BEHn4t3x.js  MappingMatrix.waKxXRyk.js  MissionGrid.zCT4UyOE.js  SatreMappingMatrix.YF75v9d8.js  Sidebar.BT-cK3iX.js  Sidebar.BTne5SGG.js  Sidebar.CgsB_tlw.js  Sidebar.ClIQvf88.js  Sidebar.Cw077uFU.js  Sidebar.DIoA_dlh.js  SkillsFramework.B3WwocPx.js  SkillsFramework.CWYKtbEp.js  SkillsFramework.CpVGVagT.js  SkillsFramework.VnS18svg.js  SkillsFramework.g3IZh-Qn.js  _slug_.B7dYsHWC.css  _slug_.DTTbqSTj.css  _slug_.HYY_qsYl.css  domains.BWO1JCiN.js  domains.BeVUFHAP.js  domains.Dza7r_We.js  home.astro_astro_type_script_index_0_lang.C4-fCmRv.js  index.C9kBI9oP.css  index.astro_astro_type_script_index_0_lang.IU0L-k6b.js  index.astro_astro_type_script_index_1_lang.DvB0ma2Y.js  placement-case-studies.astro_astro_type_script_index_0_lang.DG9uXKVR.js  professional-training-placements.astro_astro_type_script_index_0_lang.CZjCq96m.js  scrollSync.CM8XkxZO.js
about/: index.html
access-identity/: index.html
acknowledgements/: index.html
demo/: index.html
(+177 files in other folders)
