[project]
name = "sde-skills"
version = "0.1.0"
description = "Competency Framework for Research Technical Professionals working with Secure Data Environments"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "EPSRC SkillsHub Team" }]
dependencies = [
    "mkdocs-awesome-nav>=3.1.1",
    "mkdocs-material>=9.6.12",
    "pandas>=2.2.3",
]

[tool.ruff]
select = ["E", "F", "W", "C"]
ignore = []
line-length = 88

[dependency-groups]
dev = ["jupyterlab>=4.4.1", "python-dotenv>=1.1.0", "pre-commit>=4.2.0"]
